--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
     "svelte": "^5.19.6",
+    "tailwindcss": "^4.0.6",
     "vite": "^6.1.0"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.6",
-    "tailwindcss": "^4.0.6"
+    "@tailwindcss/vite": "^4.0.6"
   }
 }
